# livekit-langgrah-agent

./: .gitignore  create_outbound_trunk.py  dispatch-call.sh  frontend.py  livekit_call_dispatched_cleanup.sh  main.py  pyproject.toml  run.sh
agent/: __init__.py  graph.py  main.py  property_data.py  tools.py
chroma_property_db/: chroma.sqlite3
